# cep-78-enhanced-nft

./: Makefile  README.md
client/get_events_session/src/: main.rs
client/mint_session/src/: main.rs
contract/src/: constants.rs  error.rs  events.rs  main.rs  modalities.rs  utils.rs
test-contracts/minting_contract/src/: main.rs
tests-manual/gas-and-size/: Cargo.toml
tests-manual/gas-and-size/src/: main.rs
tests-manual/gas-and-size/wasm/: README.md
tests/src/: burn.rs  events.rs  installer.rs  lib.rs  metadata.rs  mint.rs  transfer.rs  upgrade.rs
tests/src/utility/: constants.rs  installer_request_builder.rs
utils/costing/: benchmarks.sh  prepare.sh
